fix: add nowrap to header

--- a/style.css
+++ b/style.css
@@ -353,5 +353,6 @@
 
   .header {
     margin-left: calc(50vw - 120px);
+    white-space: nowrap;
   }
 }
